--- a/social_red/app/views/districts/show.html.erb
+++ b/social_red/app/views/districts/show.html.erb
@@ -1,4 +1,4 @@
-<p id="notice">Distrito agregado correctamente<%= notice %></p>
+<p id="notice"><%= notice %></p>
 
 <p>
   <b>Nombre del Distrito:</b>
