--- a/social_red/app/views/locals/show.html.erb
+++ b/social_red/app/views/locals/show.html.erb
@@ -1,30 +1,30 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Description:</b>
+  <b>Descripcion:</b>
   <%= @local.description %>
 </p>
 
 <p>
-  <b>Address:</b>
+  <b>Direccion:</b>
   <%= @local.address %>
 </p>
 
 <p>
-  <b>Phone:</b>
+  <b>Telefono:</b>
   <%= @local.phone %>
 </p>
 
 <p>
-  <b>Map url:</b>
+  <b>URL Google MAPS:</b>
   <%= @local.map_url %>
 </p>
 
 <p>
-  <b>District:</b>
+  <b>Distrito:</b>
   <%= @local.district %>
 </p>
 
 
-<%= link_to 'Edit', edit_local_path(@local) %> |
-<%= link_to 'Back', locals_path %>
+<%= link_to 'Editar', edit_local_path(@local) %> |
+<%= link_to 'Volver', locals_path %>
