--- a/social_red/app/views/layouts/application.html.erb
+++ b/social_red/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Games - Bar Website Template</title>
+	<title>Social RED</title>
 	<link rel="stylesheet" href="/css/style.css" type="text/css">
 	<%= stylesheet_link_tag    "application", :media => "all" %>
 	<%= javascript_include_tag "application" %>
@@ -15,13 +15,13 @@
 		<div>
 			<ul>
 				<li>
-					<a href="/index.html">Home</a>
+					<a href="/index.html">Origen</a>
 				</li>
 				<li>
-					<a href="/events.html">Events</a>
+					<a href="/events.html">Locales</a>
 				</li>
 				<li class="selected">
-					<a href="/games.html">Games</a>
+					<a href="/games.html">Distritos</a>
 				</li>
 				<li>
 					<a href="/menu.html">Menu</a>
