--- a/social_red/app/views/locals/new.html.erb
+++ b/social_red/app/views/locals/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New local</h1>
+<h1>Nuevo Local</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', locals_path %>
+<%= link_to 'Volver', locals_path %>
