--- a/social_red/public/css/style.css
+++ b/social_red/public/css/style.css
@@ -1,7 +1,7 @@
 /* Website template by freewebsitetemplates.com */
 /*------------------------- Layout styles ------------------------*/
 body {
-	background:url(../images/bg-body.jpg);
+	background:url(../images/fondo1.jpg);
 	margin:0;
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
