--- a/social_red/app/views/locals/index.html.erb
+++ b/social_red/app/views/locals/index.html.erb
@@ -18,7 +18,10 @@
     <td><%= local.address %></td>
     <td><%= local.phone %></td>
     <td><%= local.map_url %></td>
-    <td><%= local.district %></td>
+    <td><%= local.district.district_name %></td>
+
+     
+
     <td><%= link_to 'Mostrar', local %></td>
     <td><%= link_to 'Editar', edit_local_path(local) %></td>
     <td><%= link_to 'Eliminar', local, method: :delete, data: { confirm: 'Esta Seguro?' } %></td>
