--- a/social_red/public/css/style.css
+++ b/social_red/public/css/style.css
@@ -121,14 +121,14 @@ p a:hover {
 	width:210px;
 }
 .body div div.section div:first-child ul li p {
-	color:#7e7e7e;
+	color:#000000;
 	font-size:14px;
 	line-height:24px;
 	margin:0;
 	letter-spacing:0.05em;
 }
 .body div div.section div:first-child ul li span {
-	color:#7e7e7e;
+	color:#000000;
 	display:block;
 	font-size:12px;
 	padding-top:5px;
@@ -174,7 +174,7 @@ p a:hover {
 	text-transform:uppercase;
 }
 .body div div.section div ul li h4 span {
-	color:#7e7e7e;
+	color:#000000;
 	text-decoration:none;
 	font-size:14px;
 }
@@ -194,7 +194,7 @@ p a:hover {
 	width:200px;
 }
 .body div div.section div.last ul li a {
-	color:#7e7e7e;
+	color:#000000;
 	font-size:14px;
 	text-decoration:none;
 	text-transform:uppercase;
@@ -218,7 +218,7 @@ p a:hover {
 }
 .body div div.events ul li h3 {
 	text-align:center;
-	color:#7e7e7e;
+	color:#000000;
 	font-size:20px;
 	text-transform:uppercase;
 	font-weight:normal;
@@ -229,7 +229,7 @@ p a:hover {
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 .body div div.events ul li p {
-	color:#7e7e7e;
+	color:#000000;
 	font-size:14px;
 	line-height:24px;
 	margin:22px 0 0;
@@ -237,7 +237,7 @@ p a:hover {
 	padding: 0;
 }
 .body div div.events p {
-	color:#7e7e7e;
+	color:#000000;
 	font-size:14px;
 	line-height:24px;
 	margin:0;
@@ -253,7 +253,7 @@ p a:hover {
 	padding:49px 0 0;
 }
 .body div div.games h4 {
-	color:#7e7e7e;
+	color:#000000;
 	font-size:20px;
 	margin:8px 0 0;
 	line-height:30px;
@@ -261,7 +261,7 @@ p a:hover {
 	text-transform:uppercase;
 }
 .body div div.games p {
-	color:#7e7e7e;
+	color:#000000;
 	font-size:14px;
 	line-height:30px;
 	margin:2px 0 0;
@@ -285,7 +285,7 @@ p a:hover {
 	width:250px;
 }
 .body div div.menu ul li h3 {
-	color:#7e7e7e;
+	color:#000000;
 	font-size:20px;
 	margin:51px 0 25px;
 	text-transform:uppercase;
@@ -307,7 +307,7 @@ p a:hover {
 	width:300px;
 }
 .body div div.menu ul ul li p {
-	color:#7E7E7E;
+	color:#000000;
 	float:left;
 	font-size:14px;
 	line-height:24px;
@@ -318,7 +318,7 @@ p a:hover {
 	float:left;
 }
 .body div div.menu ul ul li span {
-	color:#7e7e7e;
+	color:#000000;
 	display:block;
 	font-size:14px;
 	line-height:24px;
@@ -329,7 +329,7 @@ p a:hover {
 	margin:0 0 0 30px!important;
 }
 .body div div.menu p {
-	color:#7e7e7e;
+	color:#000000;
 	font-size:14px;
 	line-height:24px;
 	margin:0;
@@ -343,7 +343,7 @@ p a:hover {
 	width:940px;
 }
 .body div div.about h4 {
-	color:#7e7e7e;
+	color:#000000;
 	font-size:20px;
 	margin:0;
 	line-height:30px;
@@ -351,7 +351,7 @@ p a:hover {
 	text-transform:uppercase;
 }
 .body div div.about h5 {
-	color:#7e7e7e;
+	color:#000000;
 	font-size:14px;
 	line-height:30px;
 	letter-spacing:0.075em;
@@ -359,7 +359,7 @@ p a:hover {
 	margin:0;
 }
 .body div div.about p {
-	color:#7e7e7e;
+	color:#000000;
 	font-size:14px;
 	line-height:30px;
 	margin:2px 0 58px;
@@ -378,7 +378,7 @@ p a:hover {
 	float:left;
 }
 .body div div.blog div:first-child h4 {
-	color:#7e7e7e;
+	color:#000000;
 	font-size:20px;
 	margin:0 0 32px;
 	text-transform:uppercase;
@@ -387,7 +387,7 @@ p a:hover {
 	font-weight:bold;
 }
 .body div div.blog div:first-child p {
-	color:#7e7e7e;
+	color:#000000;
 	font-size:14px;
 	line-height:30px;
 	margin:0 0 30px;
@@ -409,7 +409,7 @@ p a:hover {
 	width:230px;
 }
 .body div div.blog div div h3 {
-	color:#7e7e7e;
+	color:#000000;
 	font-size:14px;
 	margin:0;
 	line-height:30px;
@@ -417,7 +417,7 @@ p a:hover {
 	text-transform:uppercase;
 }
 .body div div.blog div div ul {
-	color:#7e7e7e;
+	color:#000000;
 	list-style:disc;
 	margin:0;
 	padding:6px 0 0;
@@ -430,7 +430,7 @@ p a:hover {
 	font-size:10px;
 }
 .body div div.blog div div ul li a {
-	color:#7e7e7e;
+	color:#000000;
 	font-size:14px;
 	text-decoration:none;
 }
@@ -447,7 +447,7 @@ p a:hover {
 	padding-top:0;
 }
 .body div div.section div:first-child ul li p a, .body div div.events ul li p a, .body div div.events p a, .body div div.games p a, .body div div.menu p a, .body div div.about p a, .body div div.blog div:first-child p a {
-	color:#7e7e7e;
+	color:#000000;
 }
 .body div div.section div ul li:first-child, .body div div.events ul li:first-child, .body div div.menu ul li:first-child, .body div div.menu ul ul li:first-child p, .body div div.menu ul ul li:first-child span {
 	margin:0;
