cambios en el menu de opciones

--- a/social_red/app/views/layouts/application.html.erb
+++ b/social_red/app/views/layouts/application.html.erb
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <!-- Website template by freewebsitetemplates.com -->
 <html>
@@ -14,23 +13,34 @@
 	<div class="header">
 		<div>
 			<ul>
+			<!--
 				<li>
-					<a href="/index.html">Origen</a>
+					<a href="/person_types">Tipo de usuarios</a>
 				</li>
 				<li>
-					<a href="/events.html">Locales</a>
-				</li>
-				<li class="selected">
-					<a href="/games.html">Distritos</a>
+					<a href="/sexes">Sexo</a>
 				</li>
 				<li>
-					<a href="/menu.html">Menu</a>
+					<a href="/identity_document_types">Tipo de Doc de Indent.</a>
+				</li>
+			-->
+				<li>
+					<a href="/users">Usuarios</a>
 				</li>
 				<li>
-					<a href="/about.html">About</a>
+					<a href="/districts">Distritos</a>
 				</li>
 				<li>
-					<a href="/blog.html">Blog</a>
+					<a href="/genres">Generos</a>
+				</li>
+				<li>
+					<a href="/groups">Distritos</a>
+				</li>
+				<li>
+					<a href="/locals">Locales</a>
+				</li>
+				<li>
+					<a href="/menbers">Miembros</a>
 				</li>
 			</ul>
 			<a href="index.html" class="logo"><img src="/images/logo.png" alt="logo"></a>
